--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,13 @@
 {
-  "id": "/",
   "name": "Relax Kino",
   "short_name": "KinoSite",
-  "description": "Онлайн фільми, серіали та мультики українською",
-  "start_url": "/index.html?source=pwa",
-  "scope": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#00fff2",
+  "description": "Онлайн фільми, серіали та мультики українською",
   "icons": [
     { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
-  ],
-  "shortcuts": [
-    { "name": "Останні", "short_name": "Останні", "url": "/index.html" },
-    { "name": "Профіль", "short_name": "Профіль", "url": "/profile.html" }
   ]
 }
