--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#00fff2",
   "description": "Онлайн фільми, серіали та мультики українською",
   "icons": [
-    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
